# rust-axum

./: .gitignore  Cargo.toml  env.development  env.production
.github/workflows/: cargo-build-static.yml  ci.yml  cross-build.yml
src/: main.rs
src/api/: bing.rs  changgya.rs  cos.rs  encryption.rs  everyday_60s.rs  fanyi.rs  hot_search.rs  ip.rs  mishe_cos.rs  mod.rs  qrcode.rs  weather.rs  website_info.rs  yiyan.rs  ys_kaci.rs
src/api_frontend/: api_link.rs  api_list.rs  mod.rs
src/app/: logger.rs  mod.rs
src/config/: mod.rs
src/models/: aerich.rs  apilist.rs  apistats.rs  data_cos_image.rs  data_cos_video.rs  friend_links.rs  mod.rs  prelude.rs
src/response/: error.rs  extractors.rs  mod.rs  response.rs
src/state/: database.rs  http.rs  mod.rs  redis.rs
